--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,35 +69,7 @@
         "id": "Os-bgmp3BPdh",
         "outputId": "4a53da6f-fb62-47de-c36b-c7fd79f6d314"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The Zen of Python, by Tim Peters\n",
-            "\n",
-            "Beautiful is better than ugly.\n",
-            "Explicit is better than implicit.\n",
-            "Simple is better than complex.\n",
-            "Complex is better than complicated.\n",
-            "Flat is better than nested.\n",
-            "Sparse is better than dense.\n",
-            "Readability counts.\n",
-            "Special cases aren't special enough to break the rules.\n",
-            "Although practicality beats purity.\n",
-            "Errors should never pass silently.\n",
-            "Unless explicitly silenced.\n",
-            "In the face of ambiguity, refuse the temptation to guess.\n",
-            "There should be one-- and preferably only one --obvious way to do it.\n",
-            "Although that way may not be obvious at first unless you're Dutch.\n",
-            "Now is better than never.\n",
-            "Although never is often better than *right* now.\n",
-            "If the implementation is hard to explain, it's a bad idea.\n",
-            "If the implementation is easy to explain, it may be a good idea.\n",
-            "Namespaces are one honking great idea -- let's do more of those!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import this"
       ]
@@ -122,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,15 +102,7 @@
         "id": "UNAaFJlZDrJJ",
         "outputId": "861e016b-3f2e-4b2a-ebb6-a18ac26e8d7a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Olá, Mundo!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print('Olá, Mundo!')"
       ]
@@ -162,15 +126,7 @@
         "id": "sn9CcAgYEvWw",
         "outputId": "c7acd749-628d-4683-bb8b-39d72399baa0"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "11\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(7+4)"
       ]
@@ -185,15 +141,7 @@
         "id": "-VTdDZKBE4kq",
         "outputId": "6a746a8d-9456-41c2-b077-74272d4b5644"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "74\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print('7'+'4')"
       ]
@@ -470,6 +418,15 @@
         "# print('A soma entre ', n1, 'e', n2, 'vale', s)\n",
         "print('A soma entre {} e {} vale {}'.format(n1, n2, s))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print('Teste vs')"
+      ]
     }
   ],
   "metadata": {
@@ -484,7 +441,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.2"
     }
   },
   "nbformat": 4,
