--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -162,8 +162,10 @@
       },
       "source": [
         "#### **Definições**\n",
-        "##### **Print:** significa *escreva*\n",
-        "##### **Input:** significa *leia*"
+        "\n",
+        "**Print:** significa *escreva*\n",
+        "\n",
+        "**Input:** significa *leia*"
       ]
     },
     {
@@ -228,7 +230,8 @@
       },
       "source": [
         "##### **input**\n",
-        "###### - tudo o  que for digitado, tem que ser enviado para algum lugar, então criámos uma variável *(ex: 'n1' ou 'n2')* para guardar o resultado desse input, o que o utilizador irá digitar."
+        "\n",
+        "Tudo o  que for digitado, tem que ser enviado para algum lugar, então criámos uma variável *(ex: 'n1' ou 'n2')* para guardar o resultado desse input, o que o utilizador irá digitar."
       ]
     },
     {
@@ -420,12 +423,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "print('Teste vs')"
+        "# Aula #07 - Operações Aritméticas"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "(+) Adição, (-) Substração, (*) Multiplicação, (/) Divisão, (**) Potência, (//) Divisão Inteira, (%) Resto da Divisão\n",
+        "\n",
+        "(==) utilizado para comparar dois valores e verificar se eles são iguais"
       ]
     }
   ],
