--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -439,6 +439,22 @@
         "\n",
         "(==) utilizado para comparar dois valores e verificar se eles são iguais"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "s1=5+2 #7\n",
+        "s2=5-2 #3\n",
+        "s3=5*2 #10\n",
+        "s4=5/2 #2.5\n",
+        "s5=5**2 #25\n",
+        "s6=5//2 #2 (vai contar a parte inteira e ignorar a parte decimal)\n",
+        "s7=5%2 #1 (o que sobrou na conta de divisão)\n",
+        "print(s1, s2, s3, s4, s5, s6, s7)"
+      ]
     }
   ],
   "metadata": {
