--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -455,6 +455,20 @@
         "s7=5%2 #1 (o que sobrou na conta de divisão)\n",
         "print(s1, s2, s3, s4, s5, s6, s7)"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Ordem de Precedência\n",
+        "\n",
+        "Quais os operadores que executam **em primeiro lugar**:\n",
+        "1. ( ) \n",
+        "1. **\n",
+        "1. *,  / // %\n",
+        "1. +,  -"
+      ]
     }
   ],
   "metadata": {
