--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -461,7 +461,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Ordem de Precedência\n",
+        "#### **Ordem de Precedência**\n",
         "\n",
         "Quais os operadores que executam **em primeiro lugar**:\n",
         "1. ( ) \n",
