--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -469,6 +469,45 @@
         "1. *,  / // %\n",
         "1. +,  -"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "s1=5+3*2\n",
+        "s2=3*2 # 1º\n",
+        "s3=s2+5 # 2º\n",
+        "print(s1, s2, s3)\n",
+        "# Primeiro irá fazer a conta de divisão, depois de somar"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "s1=3*5+4**2\n",
+        "s2=4**2 # 1º\n",
+        "s3=3*5 # 2º\n",
+        "s4=s2+s3 # 4º\n",
+        "print(s1,s2,s3,s4)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "s1=3*(5+4)**2\n",
+        "s2=5+4 # 1º\n",
+        "s3=s2**2 # 2º\n",
+        "s4=3*s3 # 3º\n",
+        "print(s1, s2, s3, s4)"
+      ]
     }
   ],
   "metadata": {
