--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -508,6 +508,20 @@
         "s4=3*s3 # 3º\n",
         "print(s1, s2, s3, s4)"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dá para fazer a potência de outra maneira com a função interna de potência:\n",
+        "\n",
+        "```\n",
+        "pow(4,3)\n",
+        "```\n",
+        "\n",
+        "Equivale ao mesmo (4**3)"
+      ]
     }
   ],
   "metadata": {
