--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -510,17 +510,34 @@
       ]
     },
     {
-      "attachments": {},
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
-        "Dá para fazer a potência de outra maneira com a função interna de potência:\n",
-        "\n",
-        "```\n",
-        "pow(4,3)\n",
-        "```\n",
-        "\n",
-        "Equivale ao mesmo (4**3)"
+        "# Dá para fazer a **potência** de outra maneira com a função interna de potência:\n",
+        "# Equivale ao mesmo 4**3\n",
+        "pow(4,3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Raiz Quadrada\n",
+        "81**(1/2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Raiz Cubica\n",
+        "127**(1/3)"
       ]
     }
   ],
