--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -539,6 +539,51 @@
         "# Raiz Cubica\n",
         "127**(1/3)"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "*Também dá para fazer com strings:*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "'Oi' + 'Olá'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "'Oi'*5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "====================\n"
+          ]
+        }
+      ],
+      "source": [
+        "'='*20\n",
+        "# ou\n",
+        "print('='*20)"
+      ]
     }
   ],
   "metadata": {
