--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -576,6 +576,58 @@
         "# ou\n",
         "print('='*20)"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### *Espécie de Alinhamentos*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Alinhamento à esquerda\n",
+        "nome = input('Qual é o seu nome? ')\n",
+        "print('Prazer em te conhecer {:<20}!'.format(nome))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Alinhamento à direita\n",
+        "nome = input('Qual é o seu nome? ')\n",
+        "print('Prazer em te conhecer {:>20}!'.format(nome))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Alinhamento centrado\n",
+        "nome = input('Qual é o seu nome? ')\n",
+        "print('Prazer em te conhecer {:^20}!'.format(nome))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Em 20 espaços, centralizado, colocando = em volta\n",
+        "nome = input('Qual é o seu nome? ')\n",
+        "print('Prazer em te conhecer {:=^20}!'.format(nome))"
+      ]
     }
   ],
   "metadata": {
