--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -628,6 +628,23 @@
         "nome = input('Qual é o seu nome? ')\n",
         "print('Prazer em te conhecer {:=^20}!'.format(nome))"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### *Exercicios:*\n",
+        "* 005 - Antecessor e Sucessor\n",
+        "* 006 - Dobro, Triplo e Raiz Quadrada\n",
+        "* 007 - Média Aritmética\n",
+        "* 008 - Conversor de Medidas\n",
+        "* 009 - Tabuada\n",
+        "* 010 - Conversor de Moedas\n",
+        "* 011 - Área e Quantidade de Tinta\n",
+        "* 012 - Calcular descontos\n",
+        "* 013 - Reajuste Salarial"
+      ]
     }
   ],
   "metadata": {
