--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -635,15 +635,15 @@
       "metadata": {},
       "source": [
         "#### *Exercicios:*\n",
-        "* 005 - Antecessor e Sucessor\n",
-        "* 006 - Dobro, Triplo e Raiz Quadrada\n",
-        "* 007 - Média Aritmética\n",
-        "* 008 - Conversor de Medidas\n",
-        "* 009 - Tabuada\n",
-        "* 010 - Conversor de Moedas\n",
-        "* 011 - Área e Quantidade de Tinta\n",
-        "* 012 - Calcular descontos\n",
-        "* 013 - Reajuste Salarial"
+        "* Desafio 005 - Antecessor e Sucessor\n",
+        "* Desafio 006 - Dobro, Triplo e Raiz Quadrada\n",
+        "* Desafio 007 - Média Aritmética\n",
+        "* Desafio 008 - Conversor de Medidas\n",
+        "* Desafio 009 - Tabuada\n",
+        "* Desafio 010 - Conversor de Moedas\n",
+        "* Desafio 011 - Área e Quantidade de Tinta\n",
+        "* Desafio 012 - Calcular descontos\n",
+        "* Desafio 013 - Reajuste Salarial"
       ]
     }
   ],
