--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -643,7 +643,7 @@
         "* Desafio 010 - Conversor de Moedas\n",
         "* Desafio 011 - Área e Quantidade de Tinta\n",
         "* Desafio 012 - Calcular descontos\n",
-        "* Desafi 013 - Reajuste Salarial"
+        "* Desafio 013 - Reajuste Salarial"
       ]
     }
   ],
